[project]
name = "streamlit-typed-session"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = ["streamlit>=1.46.0", "typing-extensions>=4.14.0"]


[dependency-groups]
dev = ["pydantic>=2.11.7", "pytest>=8.4.1", "ruff>=0.12.1"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 120


[tool.ruff.lint]
select = ["ALL"]
ignore = ["D"]
